--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,12 @@ button:hover {
   background-color: #ddd;
   color: black;
 }
+
+button:disabled {
+  background-color: #ddd;
+  color: black;
+  cursor: not-allowed;
+}
 input[type="text"] {
   border: 1px solid #99afc1;
   border-radius: 3px;
